--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,47 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
+        xmlns:aapt="http://schemas.android.com/aapt"
+        android:width="108dp"
+        android:height="108dp"
+        android:viewportWidth="180"
+        android:viewportHeight="180">
+    <group android:translateX="36"
+            android:translateY="36">
+      <path
+          android:pathData="m27.1,88.69 l54.11,31.241h45.787v-45.231l-81.566,-57.973z">
         <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
+          <gradient 
+              android:startY="68.42"
+              android:startX="51.999977"
+              android:endY="89.28999"
+              android:endX="74.599976"
+              android:type="linear">
+            <item android:offset="0" android:color="#5E000000"/>
+            <item android:offset="1" android:color="#001A1A1A"/>
+          </gradient>
         </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+      </path>
+      <path
+          android:pathData="m27.1,16.69v71.999h22.364c5.434,0 9.992,-0.34 14.034,-1.244 3.947,-0.877 7.679,-2.339 11.042,-4.417h0.014v-0.014c4.928,-3.051 8.913,-7.453 11.699,-12.678 2.869,-5.335 4.291,-11.357 4.291,-17.584 0,-6.455 -1.29,-12.558 -4.151,-17.877 -2.757,-5.126 -6.793,-9.44 -11.727,-12.524l-0.029,-0.014 -0.014,-0.014c-3.14,-1.94 -6.676,-3.267 -10.525,-4.193 0,-0.001 -0.01,-0.014 -0.014,-0.014 -4.235,-1.049 -9.018,-1.426 -14.774,-1.426zM60.115,23.875 L60.199,23.889c-0.014,-0.003 -0.036,0.003 -0.057,0 -0.01,-0.002 -0.022,-0.014 -0.029,-0.014zM51.337,40.033c2.117,0.075 4.192,0.182 5.507,0.447l0.043,0.014h0.043c1.547,0.297 2.948,0.821 4.333,1.607 1.668,0.955 2.595,1.945 3.368,3.467 0.751,1.477 1.328,3.741 1.328,7.073 0,3.382 -0.57,5.677 -1.23,7.045v0.029l-0.014,0.029c-0.698,1.473 -1.552,2.445 -3.061,3.411 -1.295,0.829 -2.666,1.381 -4.319,1.705h-0.014c-1.505,0.298 -3.709,0.414 -5.982,0.49zM80.005,66.982 L79.976,67.039v-0.029c0.01,-0.014 0.021,-0.014 0.029,-0.029z">
+        <aapt:attr name="android:fillColor">
+          <gradient 
+              android:startY="16.69408"
+              android:startX="27.085922"
+              android:endY="48.911037"
+              android:endX="56.893665"
+              android:type="linear">
+            <item android:offset="0" android:color="#FFD4D4D4"/>
+            <item android:offset="1" android:color="#FFABABAB"/>
+          </gradient>
+        </aapt:attr>
+      </path>
+      <path
+          android:pathData="m66.7,30.63c-3.689,0.131 -7.303,0.317 -9.595,0.779l-0.075,0.025h-0.075c-2.696,0.517 -5.136,1.43 -7.549,2.8 -2.906,1.664 -4.521,3.388 -5.869,6.039 -1.308,2.574 -2.313,6.518 -2.313,12.322 0,5.892 0.992,9.89 2.143,12.273v0.05l0.025,0.05c1.217,2.566 2.704,4.26 5.333,5.942 2.256,1.445 4.644,2.406 7.525,2.971h0.025c2.621,0.519 6.462,0.721 10.423,0.853z"
+          android:fillColor="#282966"/>
+      <path
+          android:pathData="m94.907,22.984s-10.204,8.225 -15.708,11.806c-9.891,7.581 -20.33,14.492 -29.768,22.637 -6.566,6.738 -13.824,12.855 -21.882,17.739 1.439,2.722 -3.777,5.986 -3.777,5.986l1.345,-0.181 -0.734,2.479s9.454,-6.035 12.043,-11.057c2.061,-2.329 7.307,-1.453 8.757,0.047 0.321,1.456 0.45,-2.273 0.814,0.044 1.184,2.794 0.652,-2.271 -0.237,-2.742 0.708,1.937 5.069,3.851 3.366,0.714 1.629,-0.129 7.887,-0.161 3.382,-1.509 -1.435,-0.535 -6.161,-1.59 -5.478,-2.084 3.052,0.247 9.216,0.759 9.216,0.759l0.217,-2.656s-5.842,-0.625 -5.95,-0.954c4.477,-1.094 13.579,-2.696 13.579,-2.696l2.793,-4.569s-7.058,0.758 -7.243,0.722c4.326,-1.002 13.084,-2.686 13.084,-2.686l5.469,-6.752s-5.423,1.104 -1.844,0.214c6.334,-2.582 11.292,-11.276 13.563,-17.017 -1.444,0.221 -3.29,0.456 -0.875,-0.479 2.254,-0.76 -1.131,-1.473 -1.131,-1.473z"
+          android:fillColor="#303030"/>
+      <path
+          android:pathData="m94.4,22.45s-10.204,8.225 -15.709,11.806c-9.891,7.581 -20.33,14.492 -29.768,22.637 -6.566,6.738 -13.824,12.855 -21.882,17.739 1.439,2.722 -3.777,5.986 -3.777,5.986l1.345,-0.181 -0.734,2.479s9.454,-6.034 12.042,-11.057c2.061,-2.329 7.307,-1.453 8.757,0.047 0.321,1.456 0.45,-2.273 0.814,0.044 1.184,2.794 0.652,-2.271 -0.237,-2.742 0.708,1.937 5.07,3.851 3.366,0.714 1.629,-0.129 7.887,-0.161 3.382,-1.509 -1.435,-0.535 -6.161,-1.59 -5.478,-2.084 3.052,0.247 9.216,0.759 9.216,0.759l0.217,-2.656s-5.841,-0.625 -5.95,-0.954c4.477,-1.094 13.579,-2.696 13.579,-2.696l2.793,-4.569s-7.058,0.758 -7.243,0.722c4.326,-1.002 13.084,-2.686 13.084,-2.686l5.469,-6.752s-5.424,1.104 -1.844,0.214c6.334,-2.582 11.291,-11.277 13.563,-17.017 -1.444,0.221 -3.29,0.456 -0.875,-0.479 2.254,-0.76 -1.131,-1.473 -1.131,-1.473z"
+          android:fillColor="#474ab5"/>
+    </group>
 </vector>
