--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -4,17 +4,17 @@
 
     <header
         android:fragment="com.example.jspann.dailydroid.SettingsActivity$GeneralPreferenceFragment"
-        android:icon="@drawable/ic_info_black_24dp"
+        android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/pref_header_general" />
+
+    <header
+        android:fragment="com.example.jspann.dailydroid.SettingsActivity$InformationFragment"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="About" />
 
     <!--header
         android:fragment="com.example.jspann.textfilewriter.SettingsActivity$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" /-->
-
-    <!--header
-        android:fragment="com.example.jspann.textfilewriter.SettingsActivity$DataSyncPreferenceFragment"
-        android:icon="@drawable/ic_sync_black_24dp"
-        android:title="@string/pref_header_data_sync" /-->
 
 </preference-headers>
