--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -8,6 +8,11 @@
         android:title="@string/pref_header_general" />
 
     <header
+        android:fragment="com.example.jspann.dailydroid.SettingsActivity$ThemesFragment"
+        android:icon="@drawable/ic_color_lens_black_24dp"
+        android:title="Themes" />
+
+    <header
         android:fragment="com.example.jspann.dailydroid.SettingsActivity$InformationFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="About" />
