--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -68,6 +68,11 @@
             android:key="daily_droid__pref_fancy_scroll_enabled_bln"
             android:summary="@string/pref_general__scroll_desc"
             android:title="@string/pref_general__scroll" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="daily_droid__pref_files_hidden_bln"
+            android:summary="@string/pref_general__files_hidden_view_desc"
+            android:title="@string/pref_general__files_hidden_view" />
     </PreferenceCategory>
 
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
