--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="15sp"
-    android:textSize="18sp">
-</TextView>
+    android:textSize="18sp"></TextView>
