--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
 
     <color name="colorText">#222</color>
     <color name="colorTextMedium">#737373</color>
-    <color name="colorTextLight">#A5A5A5</color>
+    <color name="colorTextLight">#DDD</color>
     <color name="colorTextBright">#eee</color>
     <color name="colorNone">#00eeeeee</color>
 
